--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.view.AddNotesActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".ui.view.HomeActivity"
             android:exported="true" />
